public_html/extensions/novator/storefront/view/novator/css/tm_style.css
/* ... */
.navbar .nav-link {
    display: inline-flex;
    align-items: center;
    gap: 5px;
    position: relative;
    white-space: nowrap;
}

.navbar .menu-sub-item .nav-link {
    height: 46px;
}

.nav-link.active,
.mega-menu-category-columns a.active
{
    font-weight: bold !important;
}
.mega-menu-category-columns a.active
{
    color: var(--Black-1) !important;
}

.mega-menu-category-columns .category-card{
    width: max-content;
    margin:20px;
}

/* bugfix after mouseover on category list*/
#menu_all_categories_dropdown{
    width: -moz-available;
    width: -webkit-fill-available;
}


.footer-content-menu>ul>li a>span.text-truncate,
.mega-sf-menu ul>li>a>span.text-truncate
{
    display: block;
    max-width: 400px;
    overflow: hidden;
    text-overflow: ellipsis;
}

/*.footer-content-menu .dropdown-caret{*/
/*    display: inline-block;*/
/*}*/

.mega-sf-menu .dropdown-toggle::after,
.footer-content-menu .dropdown-toggle::after {
    display: none !important;
}

.mega-sf-menu .active{
    color: var(--bs-primary);
    font-weight: bold !important;
}
.mega-sf-menu>li>.nav-link.active:after {
    content: "";
    position: absolute;
    bottom: 0;
    left: 50%;
    transform: translateX(-50%);
    background: var(--bs-primary);
    width: 30px;
    height: 6px;
    border-radius: 2px 2px 0 0;
}

.navbar .mega-menu .category-title {
    color: var(--Black-1) !important;
    font-size: 18px;
    font-weight: 700;
    line-height: 25px;
}
.navbar .mega-menu .category-sub-links a {
    display: flex;
    transition: all 0.2s ease-in-out;
    color: var(--Black-1) !important;
    margin-top: 5px;
    font-size: 16px;
    font-weight: 400;
    height: 30px;
}
.mega-menu-category-columns .card-body .category-sub-links a:hover{
    color: var(--bs-primary) !important;
}

.mega-menu-category-columns .card-body .category-sub-links{
    margin-top: 10px;
}




.navbar .dropdown-toggle svg.icon-chevron {
    width: 12px;
    height: 12px;
}

.category-dropdown {
    position: static;
}

.category-dropdown .dropdown-menu.dropdown-mega-menu {
    top: 100%;
    left: 0;
    right: 0;
    padding: 20px 5px;
    border: none;
    border-radius: 0 0 12px 12px;
    background: #fff;
    box-shadow: 0 4px 60px 0 rgba(0, 0, 0, 0.05);
    width: fit-content;
}

.category-dropdown .dropdown-menu.dropdown-mega-menu .tab-content {
    min-width: 850px;
}

.category-dropdown .dropdown-menu {
    overflow: hidden;
    overflow-y: auto;
    max-height: calc(100vh - 150px);
}

.dropdown-menu .menu-sub-item .dropdown-menu {
    position: absolute;
}

.category-dropdown .category-title {
    color: var(--Black-1);
    font-size: 18px;
    font-weight: 700;
    line-height: 25px;
}

.category-dropdown .category-title.menu-img-caption {
    margin-top: 15px;
    margin-bottom: 0;
}

.category-dropdown .category-links a {
    display: flex;
    padding: 10px 18px;
    border-radius: 4px;
    transition: all 0.2s ease-in-out;
    color: var(--Black-1);
    margin-bottom: 15px;
    font-size: 18px;
    font-weight: 700;
}

.category-dropdown .category-links a.active,
.category-dropdown .category-links a:hover {
    background: var(--Grey-6);
}

.category-dropdown .category-sub-links a {
  display: flex;
  transition: all 0.2s ease-in-out;
  color: var(--Black-1);
  margin-top: 5px;
  font-size: 16px;
  font-weight: 400;
  height: 40px;
}

.category-dropdown .category-sub-links a.active,
.category-dropdown .category-sub-links a:hover {
    color: var(--bs-primary);
}

.mega-menu .featured-products .card-body {
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    height: 400px;
    max-width: 252px;
}
@media (max-width: 1180px) {
    .mega-menu .featured-products .card-body {
        max-width: 188px;
    }
}
.mega-menu-category-columns{
    overflow-y: auto;
}

.mega-menu-category-column{
    min-width: 150px;
}

.cart-offcanvas {
    --bs-offcanvas-width: 521px;
}
@media (max-width: 490px) {
    .cart-offcanvas {
        --bs-offcanvas-width: 90%;
    }
}

.cart-offcanvas .btn-group {
    border: 1px solid var(--bs-border-color);
}

.cart-offcanvas .btn-group input {
    width: 35px;
}

.mob-nav-btn {
    width: 48px;
    height: 48px;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    border-radius: 50%;
    background: var(--Grey-7);
    color: var(--Grey-2);
    margin-left: 8px;
}

.btn-icon {
    width: 38px;
    height: 38px;
    display: flex;
    padding: 0;
    align-items: center;
    justify-content: center;
}

.search-offcanvas .input-group {
    padding: 0 30px 0 18px;
    background: var(--Grey-6);
    border-radius: 4px;
    margin-bottom: 40px;
}

.search-offcanvas .btn-group {
    display: grid;
    background: var(--Grey-3);
    margin-bottom: 8px;
}

.search-offcanvas .btn-group .btn {
    color: #fff;
    border-radius: 4px;
}

.search-offcanvas .btn-group .btn,
.search-offcanvas .input-group {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.search-bar .btn-success{
    height: 48px;
}

.menu-top-btn {
    display: flex;
    align-items: center;
    gap: 8px;
}

.menu-top-btn .btn {
    padding: 9px 14px;
}

.menu-top-btn .btn svg {
    margin-right: 6px;
}

.menu-offcanvas {
    overflow: visible;
}



.offcanvas [data-bs-dismiss="offcanvas"] {
    margin-left: -40px;
    padding: 0;
}

.menu-offcanvas .btn-icon svg {
    width: 20px;
    height: 20px;
    margin-right: 0;
}

.menu-offcanvas .list-group-item {
    padding: 10px 25px;
}

.menu-offcanvas .accordion .accordion-item {
    border: none;
}

.menu-offcanvas .accordion .accordion-button {
    padding: 10px 25px;
}

.menu-offcanvas .accordion .accordion-button.collapsed.no-icon:after {
    display: none;
}

.menu-offcanvas .accordion .accordion-button.collapsed::after {
    transform: rotate(-90deg);
}

.menu-offcanvas .scroll-div {
    height: calc(100vh - 85px);
    overflow-x: hidden;
    overflow-y: auto;
}
/* ... */

